Fixed the header overflow and adding margin in the image in the leader

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -8,6 +8,8 @@
     &__logotitle {
         color: white;
         font-weight: 700;
+        margin-top: 0;
+        padding: $padding
     }
 
 
@@ -19,7 +21,7 @@
     }
 
     &__textcontainer {
-        width: 100%;
+        width: 90%;
         padding-bottom: 10%;
         margin-bottom: 5%;
         margin-inline-start: 5%;
