--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -12,7 +12,9 @@ body {
   background-size: 100%; }
   .header__logotitle {
     color: white;
-    font-weight: 700; }
+    font-weight: 700;
+    margin-top: 0;
+    padding: 1rem; }
   .header__text {
     color: white;
     text-transform: uppercase;
@@ -23,7 +25,7 @@ body {
     line-height: 35px;
     margin-inline-end: 10%; }
   .header__textcontainer {
-    width: 100%;
+    width: 90%;
     padding-bottom: 10%;
     margin-bottom: 5%;
     margin-inline-start: 5%;
@@ -43,3 +45,10 @@ body {
     background-image: url(../images/desktop/image-hero.jpg);
     background-repeat: no-repeat;
     background-size: 100%; } }
+
+.main__leader__image {
+  width: 100%; }
+
+.main__imagecontainer {
+  margin-inline-end: 10%;
+  margin-inline-start: 10%; }
